vlib/v/checker/tests/wrong_propagate_ret_type.out
vlib/v/checker/tests/wrong_propagate_ret_type.vv:10:17: error: to propagate the Option call, `opt_call` must return an Option
    8 | 
    9 | fn opt_call() int {
   10 |     a := ret_none()?
      |                    ^
   11 |     return a
   12 | }
Details: vlib/v/checker/tests/wrong_propagate_ret_type.vv:9:15: details: prepend ? before the declaration of the return type of `opt_call`
    7 | }
    8 | 
    9 | fn opt_call() int {
      |               ~~~
   10 |     a := ret_none()?
   11 |     return a
vlib/v/checker/tests/wrong_propagate_ret_type.vv:10:17: error: to propagate the call, `opt_call` must return an Option type
    8 | 
    9 | fn opt_call() int {
   10 |     a := ret_none()?
      |                    ^
   11 |     return a
   12 | }
Details: vlib/v/checker/tests/wrong_propagate_ret_type.vv:9:15: details: prepend ? before the declaration of the return type of `opt_call`
    7 | }
    8 | 
    9 | fn opt_call() int {
      |               ~~~
   10 |     a := ret_none()?
   11 |     return a
vlib/v/checker/tests/wrong_propagate_ret_type.vv:15:17: error: to propagate the Result call, `res_call` must return a Result
   13 | 
   14 | fn res_call() bool {
   15 |     a := ret_bool()!
      |                    ^
   16 |     return a
   17 | }
Details: vlib/v/checker/tests/wrong_propagate_ret_type.vv:14:15: details: prepend ! before the declaration of the return type of `res_call`
   12 | }
   13 | 
   14 | fn res_call() bool {
      |               ~~~~
   15 |     a := ret_bool()!
   16 |     return a
vlib/v/checker/tests/wrong_propagate_ret_type.vv:15:17: error: unexpected `!`, the function `ret_bool` does not return a Result
   13 | 
   14 | fn res_call() bool {
   15 |     a := ret_bool()!
      |                    ^
   16 |     return a
   17 | }
